# emerald

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  TODO.md  bench.rb  benchmark_map_test.go  fibonacci.rb  go.mod  go.sum  main  main.go  main.rb  math.rb  object.rb
ast/: array_literal.go  assignment_expression.go  block_literal.go  block_statement.go  boolean_expression.go  boolean_literal.go  call_expression.go  class_literal.go  ensure_block.go  expression_statement.go  float_literal.go  hash_literal.go  identifier_expression.go  if_expression.go  infix_expression.go  instance_variable.go  integer_literal.go  method_call.go  method_literal.go  module_literal.go  null_expression.go  prefix_expression.go  regex_literal.go  rescue_block.go  return_statement.go  scope_accessor.go  self.go  static_class_literal.go  string_literal.go  symbol_literal.go
benches/: benchmark_method_calls.rs
bytecode/: bytecode.go
cmd/: main.go
compiler/: boolean_literal_test.go  bytecode.go  compilation_scope.go  compilation_scope_test.go  compile_array_literal.go  compile_array_literal_test.go  compile_assignment.go  compile_assignment_test.go  compile_boolean_literal_test.go  compile_call_expression.go  compile_call_expression_test.go  compile_case_expression.go  compile_case_expression_test.go  compile_class_literal.go  compile_class_literal_test.go  compile_global_assignment.go  compile_global_assignment_test.go  compile_hash_literal.go  compile_hash_literal_test.go  compile_identifier_expression.go  compile_identifier_expression_test.go  compile_if_expression.go  (+35 more)
(+349 files in other folders)
