[package]
name = "emerald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark_method_calls"
harness = false

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
linefeed = "0.6"
lazy_static = "1.4.0"
